fixing input css on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4945,14 +4945,13 @@ iframe.fb_ltr{
   width:48%;
 }
 #launch-videos .btn-share2-container{
-  width:96%;
+  width:100%;
   max-width:365px;
 }
 #launch-videos .btn-share2{
   background-color:#656161;
   margin-bottom:4px;
-  width:50%;
-  margin-left:-2px;
+  width:48.5%;
 }
 #launch-videos .btn-share{
   font-family:'Open Sans', sans-serif;
@@ -5090,6 +5089,8 @@ iframe.fb_ltr{
 #launch-videos .opt-in{
   top:53px;
   position:relative;
+  padding-left:5px;
+  padding-right:5px;
   background-color:rgba(0,0,0,0.702);
 }
 #launch-videos .opt-in h4{
