--- a/src/css/pages/launch-squeeze.styl
+++ b/src/css/pages/launch-squeeze.styl
@@ -92,13 +92,13 @@
     background-color: #fffc;
     width: 48%
   .btn-share2-container
-    width: 96%;
+    width: 100%;
     max-width: 365px;
   .btn-share2
     background-color: rgb(101, 97, 97);
     margin-bottom: 4px;
-    width: 50%
-    margin-left: -2px;
+    width: 48.5%
+    
   .btn-share
     font-family: 'Open Sans', sans-serif
     -webkit-appearance: none;
@@ -221,7 +221,8 @@
     //top: 50%;
     top: 53px
     position: relative;
-
+    padding-left: 5px;
+    padding-right: 5px;
     background-color: #000000b3;
     //transform: translateY(-50%);
     h4
